# ironing_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  db.py  main.py
src/common/: callbacks.py  middlewares.py  states.py  texts.py
src/keyboards/: inline.py  reply.py
src/repos/: base.py  orders.py  statuses.py  users.py
src/routers/: start.py  user_actions.py  user_register.py
src/schemas/: base.py  orders.py  statuses.py  users.py
src/services/: base.py  register.py
src/utils/: db_manager.py  exceptions.py  functions.py  sms.py
